<resources>
    <string name="app_name">Admin Sadewa</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Password </string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>>
    <string name="daftar">daftar</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nomor_hp">Nomor Hp</string>
    <string name="username">Username</string>
    <string name="reistrasi">Tambah Admin</string>
    <string name="nim">nim</string>
    <string name="alamat">alamat</string>
    <string name="nama">nama</string>
    <string name="full_name">full name</string>
    <string name="your_name">your name</string>
    <string name="your_email_address">your email address</string>
    <string name="Phone_number">phone number</string>
    <string name="reset_password">reset password</string>
    <string name="change_profile">edit profile</string>
    <string name="logout">logout</string>
    <string name="email_not_verfied">Email Not Verfied !</string>
    <string name="verify_now">Verify Now</string>
    <string name="wisata">KELOLA DESTINASI WISATA</string>
    <string name="kuliner">KELOLA DESTINASI KULINER</string>
    <string name="oleh_oleh">KELOLA DESTINASI OLEH OLEH</string>
    <string name="penginapan">KELOLA DESTINASI PENGINAPAN</string>
    <string name="kesenian">KESENIAN</string>
    <string name="cagar_budaya">KELOLA DESTINASI CAGAR BUDAYA</string>
    <string name="save">save</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="registrasi">Registrasi</string>


    <string name="map_box_access_token">pk.eyJ1IjoieXVzdWYxMyIsImEiOiJja3ZwOHRkbDY0bnFtMm5zMTk0YnYweDFhIn0.gjk81N3c8bWgvOhFb-JY5A</string>
    <string name="title_activity_add_data_kuliner">AddDataKuliner</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>