<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#f5feff">
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:strokeWidth="4dp"
        android:padding="5dp"
        app:strokeColor="@color/white"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedCornersImageView"
        android:background="@drawable/ic_background_list"
        android:id="@+id/profileImageView"
        android:src="@drawable/ic_person_black_24dp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cobacoba"
        android:layout_marginTop="260dp"
        android:layout_marginRight="120dp"
        android:layout_marginLeft="240dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/releditnam"
        android:background="@drawable/ic_background_editprofile">

        <EditText
            android:id="@+id/profileFullName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:textColor="@color/green" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/releditnam"
        android:id="@+id/releditem"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_background_editprofile">
        <EditText
        android:id="@+id/profileEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:background="@android:color/transparent"
        android:layout_marginLeft="10dp"
        android:hint="@string/your_email_address"
        android:textColor="@color/green"
        android:inputType="textEmailAddress"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/releditnom"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_background_editprofile"
        android:layout_below="@id/releditem">
        <EditText
        android:id="@+id/profilePhoneNo"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/Phone_number"
        android:textColor="@color/green"/>
    </RelativeLayout>
    <Button
        android:id="@+id/saveProfileInfo"
        android:layout_below="@+id/releditnom"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/save" />
    </RelativeLayout>
</RelativeLayout>
</ScrollView>