<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".kuliner.KelolaKulinerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
       android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="372dp"
        android:background="@drawable/headhome"/>


    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="106dp"
           android:background="@drawable/kuliner"
           android:gravity="center"
           android:orientation="vertical"
           android:layout_gravity="center_vertical|center_horizontal">
           <ImageView
               android:id="@+id/btn_home"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@null"
               android:src="@drawable/ic_location"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/wisata"
               android:layout_marginTop="10dp"
               android:textSize="12dp"
               android:textColor="@color/white"
               android:textAlignment="center"
               android:textStyle="bold"/>
       </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relkull"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/margin_value_10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:id="@+id/kuliner"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:background="@drawable/wisata"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cookbook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:layout_marginTop="@dimen/margin_value_10dp"
                android:text="@string/kuliner"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reloll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relkull"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/margin_value_10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:id="@+id/oleh"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:background="@drawable/oleholeh"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bag" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_value_10dp"
                android:textSize="12dp"
                android:text="@string/oleh_oleh"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rellpeng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reloll"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/margin_value_10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:id="@+id/peng"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:background="@drawable/penginapan"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penginapan"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_marginTop="@dimen/margin_value_10dp"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/margin_value_10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/rellpeng">

            <LinearLayout
                android:id="@+id/cag"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/cg"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_museum" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cagar_budaya"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/margin_value_10dp"
                    android:textSize="12dp"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>




  </RelativeLayout>


</ScrollView>